<resources>
    <string name="app_name">Tasty Chicken Recipes</string>
    <string name="search_recipes">Search Recipes…</string>
    <string name="categories">Categories</string>
    <string name="todo">TODO</string>
    <string name="turkey_recipes">Turkey Recipes</string>
    <string name="chicken_soup_recipes">Chicken Soup</string>
    <string name="chicken_salad_recipes">Chicken Salad</string>
    <string name="chicken_legs_recipes">Chicken Legs</string>
    <string name="chicken_breasts_recipes">Chicken Breasts</string>
    <string name="fried_chicken_recipes">Fried Chicken</string>
    <string name="whole_chicken_recipes">Whole Chicken</string>
    <string name="bbq_grilled_chicken_recipes">BBQ and Grilled Chicken</string>
    <string name="chicken_stir_fry_recipes">Chicken Stir-Fry</string>
    <string name="baked_roasted_chicken_recipes">Baked and Roasted Chicken</string>
    <string name="chicken_stew_recipes">Chicken Stew</string>
    <string name="chicken_noodle_soup">Chicken Noodle Soup</string>
    <string name="noodle_serve">Servings: 6 Persons</string>
    <string name="noodle_total_time"> Total Time: 1 Hour</string>
    <string name="lemon_chicken_orzo_soup">Lemon Chicken Orzo Soup</string>
    <string name="lemon_serve">Servings: 12 Persons</string>
    <string name="lemon_total_time"> Total Time: 1 Hour</string>
    <string name="spicy_chicken_soup">Spicy Chicken Soup</string>
    <string name="spicy_serve">Servings: 8 Persons</string>
    <string name="spicy_total_time"> Total Time: 30 Minutes</string>
    <string name="chicken_taco_soup">Chicken Taco Soup</string>
    <string name="taco_serve">Servings: 8 Persons</string>
    <string name="taco_total_time"> Total Time: 7 Hours</string>
    <string name="chicken_tortilla_soup">Chicken Tortilla Soup</string>
    <string name="tortilla_serve">Servings: 4 Persons</string>
    <string name="tortilla_total_time"> Total Time: 35 Minutes</string>
    <string name="delicious_turkey_burgers">Delicious Turkey Burgers</string>
    <string name="turkey_burgers_serve">Servings: 12 Persons</string>
    <string name="turkey_burgers_total_time"> Total Time: 15 Minutes</string>
    <string name="turkey_and_quinoa_meatloaf">Turkey And Quinoa Meatloaf</string>
    <string name="meatlof_serve">Servings: 5 Persons</string>
    <string name="meatlof_total_time"> Total Time: 50 Minutes</string>
    <string name="simple_turkey_chilli">Simple Turkey Chilli</string>
    <string name="turkey_chilli_serve">Servings: 8 Persons</string>
    <string name="turkey_chilli_total_time"> Total Time: 45 Minutes</string>
    <string name="rosemary_roasted_turkey">Rosemary Roasted Turkey</string>
    <string name="rosemary_roasted_serve">Servings: 16 Persons</string>
    <string name="rosemary_roasted_total_time"> Total Time: 4 Hours</string>
    <string name="perfect_turkey">Perfect Turkey</string>
    <string name="perfect_turkey_serve">Servings: 24 Persons</string>
    <string name="perfect_turkey_total_time"> Total Time: 4 Hours</string>
    <string name="homestyle_turkey">Homestyle Turkey</string>
    <string name="homestyle_turkey_serve">Servings: 16 Persons</string>
    <string name="homestyle_turkey_total_time"> Total Time: 5 Hours</string>
    <string name="fruity_curry_chicken_salad">Fruity Curry Chicken Salad</string>
    <string name="fruity_chicken_salad_serve">Servings: 8 Persons</string>
    <string name="fruity_salad_total_time"> Total Time: 45 Minutes</string>
    <string name="special_chicken_salad">Special Chicken Salad</string>
    <string name="special_chicken_salad_serve">Servings: 10 Persons</string>
    <string name="special_chicken_salad_total_time"> Total Time: 20 Minutes</string>
    <string name="sesame_pasta_chicken_salad">Sesame Pasta Chicken Salad</string>
    <string name="sesame_pasta_serve">Servings: 10 Persons</string>
    <string name="sesame_pasta_total_time"> Total Time: 30 Minutes</string>
    <string name="holiday_chicken_salad">Holiday Chicken Salad</string>
    <string name="holiday_salad_serve">Servings: 12 Persons</string>
    <string name="holiday_salad_total_time"> Total Time: 15 Minutes</string>
    <string name="chicken_fiesta_salad">Chicken Fiesta Salad</string>
    <string name="fiesta_salad_serve">Servings: 4 Persons</string>
    <string name="fiesta_salad_total_time"> Total Time: 40 Minutes</string>
    <string name="spicy_hot_chicken_legs">Spicy Hot Chicken Legs</string>
    <string name="spicy_hot_chicken_legs_serve">Servings: 6 Persons</string>
    <string name="spicy_hot_chicken_legs_total_time"> Total Time: 3 Hours 5 Minutes</string>
    <string name="mediterranean_lemon_chicken">Mediterranean Lemon Chicken</string>
    <string name="mediterranean_lemon_chicken_serve">Servings: 6 Persons</string>
    <string name="mediterranean_lemon_chicken_total_time"> Total Time: 1 Hour 5 Minutes</string>
    <string name="parmesan_chicken">Parmesan Chicken</string>
    <string name="parmesan_chicken_serve">Servings: 6 Persons</string>
    <string name="parmesan_chicken_total_time"> Total Time: 1 Hour</string>
    <string name="tater_crisp_chicken">Tater Crisp Chicken</string>
    <string name="tater_crisp_chicken_serve">Servings: 10 Persons</string>
    <string name="tater_crisp_chicken_total_time"> Total Time: 1 Hour 20 Minutes</string>
    <string name="oven_bbq_chicken_drumsticks">Oven BBQ Chicken Drumsticks</string>
    <string name="oven_bbq_chicken_drumsticks_serve">Servings: 3 Persons</string>
    <string name="oven_bbq_chicken_drumsticks_total_time"> Total Time: 1 Hour 10 Minutes</string>
    <string name="garlic_chicken">Garlic Chicken</string>
    <string name="garlic_chicken_serve">Servings: 4 Persons</string>
    <string name="garlic_chicken_total_time"> Total Time: 55 Minutes</string>
    <string name="spicy_garlic_lime_chicken">Spicy Garlic Lime Chicken</string>
    <string name="spicy_garlic_lime_chicken_serve">Servings: 4 Persons</string>
    <string name="spicy_garlic_lime_chicken_total_time"> Total Time: 25 Minutes</string>
    <string name="garlic_cheddar_chicken">Garlic Cheddar Chicken</string>
    <string name="garlic_cheddar_chicken_serve">Servings: 8 Persons</string>
    <string name="garlic_cheddar_chicken_total_time"> Total Time: 55 Minutes</string>
    <string name="chicken_marsala">Chicken Marsala</string>
    <string name="chicken_marsala_serve">Servings: 4 Persons</string>
    <string name="chicken_marsala_total_time"> Total Time: 30 Minutes</string>
    <string name="salsa_chicken">Salsa Chicken</string>
    <string name="salsa_chicken_serve">Servings: 4 Persons</string>
    <string name="salsa_chicken_total_time"> Total Time: 45 Minutes</string>
    <string name="braised_balsamic_chicken">Braised Balsamic Chicken</string>
    <string name="braised_balsamic_chicken_serve">Servings: 6 Persons</string>
    <string name="braised_balsamic_chicken_total_time"> Total Time: 35 Minutes</string>
    <string name="famous_butter_chicken">Famous Butter Chicken</string>
    <string name="famous_butter_chicken_serve">Servings: 4 Persons</string>
    <string name="famous_butter_chicken_total_time"> Total Time: 55 Minutes</string>
    <string name="chicken_fried_chicken">Chicken Fried Chicken</string>
    <string name="chicken_fried_chicken_serve">Servings: 6 Persons</string>
    <string name="chicken_fried_chicken_total_time"> Total Time: 45 Minutes</string>
    <string name="garlic_fried_chicken">Garlic Fried Chicken</string>
    <string name="garlic_fried_chicken_serve">Servings: 4 Persons</string>
    <string name="garlic_fried_chicken_total_time"> Total Time: 35 Minutes</string>
    <string name="oven_fried_chicken">Oven Fried Chicken</string>
    <string name="oven_fried_chicken_serve">Servings: 10 Persons</string>
    <string name="oven_fried_chicken_total_time"> Total Time: 1 Hour</string>
    <string name="triple_dipped_fried_chicken">Triple Dipped Fried Chicken</string>
    <string name="triple_dipped_fried_chicken_serve">Servings: 6 Persons</string>
    <string name="triple_dipped_fried_chicken_total_time"> Total Time: 50 Minutes</string>
    <string name="crispy_fried_chicken">Crispy Fried Chicken</string>
    <string name="crispy_fried_chicken_serve">Servings: 8 Persons</string>
    <string name="crispy_fried_chicken_total_time"> Total Time: 45 Minutes</string>
    <string name="fried_chicken_with_creamy_gravy">Fried Chicken with Creamy Gravy</string>
    <string name="fried_chicken_with_creamy_gravy_serve">Servings: 8 Persons</string>
    <string name="fried_chicken_with_creamy_gravy_total_time"> Total Time: 55 Minutes</string>
    <string name="juicy_roasted_chicken">Juicy Roasted Chicken</string>
    <string name="juicy_roasted_chicken_serve">Servings: 6 Persons</string>
    <string name="juicy_roasted_chicken_total_time"> Total Time: 1 Hour 55 Minutes</string>
    <string name="simple_whole_roasted_chicken">Simple Whole Roasted Chicken</string>
    <string name="simple_whole_roasted_chicken_serve">Servings: 6 Persons</string>
    <string name="simple_whole_roasted_chicken_total_time"> Total Time: 2 Days</string>
    <string name="baked_slow_cooker_chicken">Baked Slow Cooker Chicken</string>
    <string name="baked_slow_cooker_chicken_serve">Servings: 6 Persons</string>
    <string name="baked_slow_cooker_chicken_total_time"> Total Time: 10 Hours 20 Minutes</string>
    <string name="spicy_rapid_roast_chicken">Spicy Rapid Roast Chicken</string>
    <string name="spicy_rapid_roast_chicken_serve">Servings: 8 Persons</string>
    <string name="spicy_rapid_roast_chicken_total_time"> Total Time: 1 Hour 45 Minutes</string>
    <string name="roast_chicken_with_rosemary">Roast Chicken with Rosemary</string>
    <string name="roast_chicken_with_rosemary_serve">Servings: 6 Persons</string>
    <string name="roast_chicken_with_rosemary_total_time"> Total Time: 2 Hours 10 Minutes</string>
    <string name="rosemary_ranch_chicken_kabobs">Rosemary Ranch Chicken Kabobs</string>
    <string name="rosemary_ranch_chicken_kabobs_serve">Servings: 6 Persons</string>
    <string name="rosemary_ranch_chicken_kabobs_total_time"> Total Time: 1 Hour</string>
    <string name="unbelievable_chicken">Unbelievable Chicken</string>
    <string name="unbelievable_chicken_serve">Servings: 6 Persons</string>
    <string name="unbelievable_chicken_total_time"> Total Time: 9 Hours</string>
    <string name="honey_mustard_grilled_chicken">Honey Mustard Grilled Chicken</string>
    <string name="honey_mustard_grilled_chicken_serve">Servings: 4 Persons</string>
    <string name="honey_mustard_grilled_chicken_total_time"> Total Time: 35 Minutes</string>
    <string name="chicken_tikka_masala">Chicken Tikka Masala</string>
    <string name="chicken_tikka_masala_serve">Servings: 4 Persons</string>
    <string name="chicken_tikka_masala_total_time"> Total Time: 2 Hours 20 Minutes</string>
    <string name="yummy_honey_chicken_kabobs">Yummy Honey Chicken Kabobs</string>
    <string name="yummy_honey_chicken_kabobs_serve">Servings: 12 Persons</string>
    <string name="yummy_honey_chicken_kabobs_total_time"> Total Time: 2 Hours 30 Minutes</string>
    <string name="key_west_chicken">Key West Chicken</string>
    <string name="key_west_chicken_serve">Servings: 4 Persons</string>
    <string name="key_west_chicken_total_time"> Total Time: 1 Hour</string>
    <string name="broccoli_chicken_stirfry">Broccoli and Chicken Stir-Fry</string>
    <string name="broccoli_chicken_stirfry_serve">Servings: 3 Persons</string>
    <string name="broccoli_chicken_stirfry_total_time"> Total Time: 35 Minutes</string>
    <string name="garlic_chicken_stirfry">Garlic Chicken Stir Fry</string>
    <string name="garlic_chicken_stirfry_serve">Servings: 4 Persons</string>
    <string name="garlic_chicken_stirfry_total_time"> Total Time: 30 Minutes</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="nutrition_facts">NUTRITION FACTS</string>
</resources>