<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".recipeshome.TurkeyRecipes">

    <android.support.v7.widget.CardView
        android:id="@+id/turkey_recipes_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorPrimary"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/icon_back_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_back_24"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/turkey_recipes"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_below="@id/turkey_recipes_header"
        android:background="@drawable/ovel_banner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:queryHint="Search Recipes..."
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

    </android.support.v7.widget.SearchView>

    <ScrollView
        android:layout_below="@id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/turkey_recipes_1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/delicious_turkey_burgers" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="105dp">

                    <TextView
                        android:id="@+id/delicious_turkey_burgers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/delicious_turkey_burgers"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/turkey_burgers_serve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/delicious_turkey_burgers"
                        android:text="@string/turkey_burgers_serve"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/turkey_burgers_serve"
                        android:text="@string/turkey_burgers_total_time"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/turkey_recipes_2"
                android:layout_below="@id/turkey_recipes_1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/turkey_and_quinoa_meatloaf" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="105dp">

                    <TextView
                        android:id="@+id/turkey_and_quinoa_meatloaf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/turkey_and_quinoa_meatloaf"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/meatloaf_serve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/turkey_and_quinoa_meatloaf"
                        android:text="@string/meatlof_serve"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/meatloaf_serve"
                        android:text="@string/meatlof_total_time"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/turkey_recipes_3"
                android:layout_below="@id/turkey_recipes_2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/simple_turkey_chilli" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="105dp">

                    <TextView
                        android:id="@+id/simple_turkey_chilli"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/simple_turkey_chilli"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/turkey_chilli_serve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/simple_turkey_chilli"
                        android:text="@string/turkey_chilli_serve"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/turkey_chilli_serve"
                        android:text="@string/turkey_chilli_total_time"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/turkey_recipes_4"
                android:layout_below="@id/turkey_recipes_3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/rosemary_roasted_turkey"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="105dp">

                    <TextView
                        android:id="@+id/rosemary_roasted_turkey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/rosemary_roasted_turkey"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/rosemary_roasted_serve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rosemary_roasted_turkey"
                        android:text="@string/rosemary_roasted_serve"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rosemary_roasted_serve"
                        android:text="@string/rosemary_roasted_total_time"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/turkey_recipes_5"
                android:layout_below="@id/turkey_recipes_4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/perfect_turkey"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="105dp">

                    <TextView
                        android:id="@+id/perfect_turkey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/perfect_turkey"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/perfect_turkey_serve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/perfect_turkey"
                        android:text="@string/perfect_turkey_serve"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/perfect_turkey_serve"
                        android:text="@string/perfect_turkey_total_time"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/turkey_recipes_6"
                android:layout_below="@id/turkey_recipes_5"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/homestyle_turkey"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="105dp">

                    <TextView
                        android:id="@+id/homestyle_turkey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/homestyle_turkey"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/homestyle_turkey_serve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/homestyle_turkey"
                        android:text="@string/homestyle_turkey_serve"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/homestyle_turkey_serve"
                        android:text="@string/homestyle_turkey_total_time"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>