<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".souprecipes.SpicyChickenSoup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ingredients"
            android:background="@drawable/rectangle_banner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/ingredients"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/instructions"
            android:layout_below="@id/ingredients"
            android:background="@drawable/rectangle_banner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="300dp"
            android:text="@string/instructions"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/nutrition_facts"
            android:layout_below="@id/instructions"
            android:background="@drawable/rectangle_banner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="300dp"
            android:text="@string/nutrition_facts"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="30sp"/>

    </RelativeLayout>

</ScrollView>